--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <h1>My first ever website</h1>
     <h3>Look Mama !! I can push to github</h3>
-    <h4>Kire ki khobor</h4>   
+    <h4>Kire ki khobor</h4>
+    <h3>Feeling happy now , i am a ghost</h3>   
 </body>
 </html>
